@@ -1,2 +1,35 @@
 # challenge-oracle-ONE
+<h1 align="center">Projecto conversor</h1>
+<br>
 Software que permite la conversión entre divisas, temperaturas y masas.
+<br>
+<p align="left">
+   <img src="https://img.shields.io/badge/STATUS-CULMINADO-blue">
+</p>
+
+## 🚀 Funcionalidades del proyecto
+
+- `Conversor de Divisas`: Permite que el usuario pueda intercambiar valores monetarios de un país a otro mediante una API fixer.com
+- `Conversor de Temperaturas`: Permite al usuario intercambiar valores entre los diferentes tipos de temperaturas.
+- `Conversor de Masas`: Permite al usuario intercambiar valores entre los diferentes tipos de masas.
+
+## 🛠️ Abre y ejecuta el proyecto
+- clonar el repositorio https://github.com/Welll192/challenge-oracle-ONE.git
+- Ejecutar MainApplication
+- Click Run > edit configuration > Modify options > add VM options
+- Pegar: --module-path "\path\to\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
+- cambiar \path\to\javafx-sdk-19\lib por la ubicacion que se obtiene al descargar el SDK de javafx en https://gluonhq.com/products/javafx/
+<br> Ejemplo:
+![img.png](img.png)
+## ✅ Tecnologías utilizdas
+- `Java 8`
+- `Java FX`
+- `okhttp`
+- `json`
+
+## 📷 Demo
+
+![demo](demochallenge.gif)
+
+## Autores
+[<img src="https://avatars.githubusercontent.com/Welll192" width=115><br><sub>Maxwel Paredes</sub>](https://github.com/Welll192)
